# Auto-spell-checker

./: Cargo.toml  README.md
Windows/: Cargo.toml  Makefile  tray-example.rc
Windows/Auto-spell-checker/: Cargo.toml
Windows/Auto-spell-checker-installer/: Cargo.toml
Windows/Auto-spell-checker-installer/src/: aws.rs  file_system.rs  main.rs
Windows/Auto-spell-checker-patcher/: Cargo.toml
Windows/Auto-spell-checker-patcher/src/: aws.rs  main.rs  utils.rs
Windows/Auto-spell-checker/src/: aws.rs  main.rs  tray.rs  util.rs
Windows/Auto_spell_checker_utils/: .gitignore  Cargo.toml
Windows/Auto_spell_checker_utils/src/: downloader.rs  lib.rs
Windows/src/: main.rs  tray.rs
macOS/AutoSpellChecker/AutoSpellChecker/: AutoSpellCheckerApp.swift  Constants.swift  ContentView.swift  GreetingView.swift  MenuView.swift  NotificationCenter.swift
macOS/AutoSpellChecker/AutoSpellChecker.xcodeproj/: project.pbxproj
macOS/AutoSpellChecker/AutoSpellChecker.xcodeproj/project.xcworkspace/xcuserdata/coaspe.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/AutoSpellChecker/AutoSpellChecker.xcodeproj/xcuserdata/coaspe.xcuserdatad/xcschemes/: xcschememanagement.plist
macOS/AutoSpellChecker/AutoSpellCheckerTests/: AutoSpellCheckerTests.swift
macOS/AutoSpellChecker/AutoSpellCheckerUITests/: AutoSpellCheckerUITests.swift  AutoSpellCheckerUITestsLaunchTests.swift
src/: main.rs  tray.rs
