[package]
name = "auto_spell_checker_installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = "0.11.0"
dotenv = "0.15.0"
aws-config = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["behavior-version-latest"]}
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", branch = "next", features = ["rt-tokio"]}
tokio = { version = "1.20.1", features = ["full"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_Shell"
]