[package]
name = "auto_spell_checker_patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_s3 = "0.48.0"
reqwest = "0.11.0"
dotenv = "0.15.0"
rusoto_core = "0.48.0"
rusoto_credential = "0.48.0"