[package]
name = "auto_spell_checker_patcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.0"
tokio = { version = "1.20.1", features = ["full"] }
ascu = { version = "0.1.0", path = "../Auto_spell_checker_utils" }
