[package]
name = "auto_spell_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
clipboard-win = "5.0.0"
futures = "0.3"
inputbot = "0.6"
notify-rust = "4"
tray-item = "0.9.0"
open = "5"
regex = "1.10.3"
sysinfo = "0.30.5"
ascu = { version = "0.1.0", path = "../Auto_spell_checker_utils" }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
]

[build-dependencies]
embed-resource = "2.3"